--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,15 @@
 :root {
-  --background-color: #f5f0e5;
-  --heading-color: #073642;
+  --background-color: #ffffff;
+  --heading-color: #000000;
   --text-color: #002b36;
-  --link-color: #3344dd;
-  --code-background-color: #ece7d8;
+  --link-color: #0071e3;
+  --code-background-color: #e7e7e7;
   --code-color: #555;
   --blockquote-color: #073642;
+  --heading-light-color: #777;
   --code-font-size: 0.8rem;
   --normal-spacing: 20px;
-  --large-spacing: 40px;
-
-  /*Code Syntax Highlight*/
-  --syntax-bg: var(--code-background-color);
-  --syntax-default: #383a42;
-  --syntax-comment: #a0a1a7;
-  --syntax-keyword: #a626a4;
-  --syntax-function: #4078f2;
-  --syntax-string: #50a14f;
-  --syntax-number: #986801;
-  --syntax-class: #c18401;
-  --syntax-variable: #e45649;
+  --large-spacing: 60px;
 }
 
 [data-theme="dark"] {
@@ -30,43 +20,30 @@
   --code-background-color: #01222c;
   --code-color: #fdf6e3;
   --blockquote-color: #93a1a1;
-
-  /*Code Syntax Highlight*/
-  --syntax-bg: var(--code-background-color);
-  --syntax-default: #abb2bf;
-  --syntax-comment: #5c6370;
-  --syntax-keyword: #c678dd;
-  --syntax-function: #61afef;
-  --syntax-string: #98c379;
-  --syntax-number: #d19a66;
-  --syntax-class: #e5c07b;
-  --syntax-variable: #e06c75;
 }
 
-/* Use a CSS reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Define fonts */
 @font-face {
-  font-family: Sentient;
-  src: url(./fonts/Sentient.ttf) format("truetype");
+  font-family: Quicksand;
+  src: url(./fonts/Quicksand.ttf) format("truetype");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
 }
 
 body {
-  font-family: "Sentient", serif;
+  font-family: "Quicksand", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   color: var(--text-color);
   background-color: var(--background-color);
   overflow-x: hidden;
-  padding: 30px 25px 50px;
+  padding: 30px 25px 100px;
 }
 
 /* Typography */
@@ -78,7 +55,6 @@ h5,
 h6 {
   color: var(--heading-color);
 }
-
 a {
   color: var(--link-color);
   text-decoration: none;
@@ -92,102 +68,20 @@ pre {
   background-color: var(--code-background-color);
   color: var(--code-color);
 }
-
 code {
   padding: 2px 6px;
   border-radius: 4px;
 }
-
 pre {
-  padding: 0px 15px 20px 15px;
+  padding: 20px 15px;
   border-radius: 5px;
   overflow-x: auto;
   line-height: 20px;
   margin-top: var(--normal-spacing);
 }
-
 pre code {
   background-color: transparent;
   padding: 0;
-}
-
-/* Syntax highlighting */
-.syntax-highlighter {
-  background-color: var(--syntax-bg) !important;
-  color: var(--syntax-default) !important;
-  border-radius: 5px !important;
-  margin-top: var(--normal-spacing) !important;
-  font-family: monospace !important;
-  font-size: var(--code-font-size) !important;
-  line-height: 20px !important;
-}
-
-.syntax-highlighter code {
-  font-family: inherit !important;
-  font-size: inherit !important;
-  background-color: transparent !important;
-  color: inherit !important;
-  padding: 0 !important;
-}
-
-/* Token colors */
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-  color: var(--syntax-comment);
-}
-.token.punctuation {
-  color: var(--syntax-default);
-}
-.token.selector,
-.token.tag {
-  color: var(--syntax-variable);
-}
-.token.property,
-.token.boolean,
-.token.number,
-.token.constant,
-.token.symbol,
-.token.attr-name,
-.token.deleted {
-  color: var(--syntax-number);
-}
-.token.string,
-.token.char,
-.token.attr-value,
-.token.builtin,
-.token.inserted {
-  color: var(--syntax-string);
-}
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-  color: var(--syntax-default);
-}
-.token.atrule,
-.token.keyword {
-  color: var(--syntax-keyword);
-}
-.token.function {
-  color: var(--syntax-function);
-}
-.token.regex,
-.token.important,
-.token.variable {
-  color: var(--syntax-variable);
-}
-.token.important,
-.token.bold {
-  font-weight: bold;
-}
-.token.italic {
-  font-style: italic;
-}
-.token.entity {
-  cursor: help;
 }
 
 blockquote {
@@ -206,7 +100,6 @@ table {
   border-collapse: collapse;
   margin: 1em 0;
 }
-
 th,
 td {
   border: 1px solid var(--text-color);
@@ -224,68 +117,7 @@ hr {
   margin: 2em 0;
 }
 
-.socials {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-top: 5px;
-}
-
-.socials a {
-  color: var(--text-color);
-  transition: transform 0.2s ease-in-out;
-  align-items: center;
-}
-
-.socials svg {
-  fill: currentColor;
-}
-
-.socials a[aria-label="Twitter"] svg {
-  height: 17px;
-  width: auto;
-}
-
-.socials a[aria-label="Email"] svg {
-  height: 17px;
-  width: auto;
-}
-
-.socials a[aria-label="GitHub"] svg {
-  height: 20px;
-  width: auto;
-}
-
-svg {
-  fill: var(--heading-color);
-}
-
-.darkmode-button,
-.nav {
-  position: fixed;
-  padding: 10px;
-  top: 10px;
-  transition: transform 0.3s ease-in-out;
-}
-
-.hide-on-scroll {
-  transform: translateY(-100%);
-}
-
-.darkmode-button {
-  right: 10px;
-}
-
-.nav {
-  left: 10px;
-}
-
-.darkmode-button svg,
-.return-home svg {
-  height: 20px;
-}
-
-.darkmode-button button {
+button {
   background: none;
   border: none;
   padding: 0;
@@ -297,214 +129,235 @@ svg {
   user-select: none;
 }
 
-.darkmode-button button:focus:not(:focus-visible) {
-  outline: none;
+/* HomePage */
+.homepage {
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--large-spacing);
+}
+.homepage h2 {
+  color: var(--heading-light-color);
+  margin-bottom: var(--normal-spacing);
 }
 
-.bloglist {
-  margin-top: var(--normal-spacing);
+/* Blog Post List */
+.tag-filter {
+  display: flex;
+  gap: 12px;
+  margin-bottom: var(--normal-spacing);
+}
+.tag-filter button {
+  font-family: monospace;
+  color: var(--code-color);
+  font-size: 0.8rem;
+  padding: 5px 8px;
+  border-radius: 8px;
+  background-color: var(--code-background-color);
+}
+.tag-filter button.active {
+  background-color: var(--heading-color);
+  color: var(--background-color);
 }
 
 .bloglist ul {
   list-style-type: none;
-  padding: 0;
   margin: 0;
-}
-
-.bloglist h2 {
-  font-size: 1rem;
-  font-weight: 500;
-}
-
-.list-item a {
-  display: flex;
-  align-items: baseline;
-  margin-bottom: 5px;
-}
-
-.item-rest {
-  color: var(--code-color);
-  margin-right: 20px;
-  font-size: 0.85rem;
-  font-family: monospace;
-}
-
-.header,
-.socials,
-.blog-list,
-.project-list {
-  margin-bottom: var(--large-spacing);
-}
-
-.about {
+  padding: 0;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  row-gap: 8px;
 }
-
-.blog-post p,
-.blog-post ol,
-.blog-post ul {
-  margin-top: var(--normal-spacing);
-}
-
-.blog-post h1,
-.blog-post h2,
-.blog-post h3,
-.blog-post h4,
-.blog-post h5,
-.blog-post h6 {
-  margin-top: var(--large-spacing);
-}
-
-.projects {
-  margin-top: var(--large-spacing);
-}
-
-.projects svg {
-  fill: none;
-  width: 18px;
-}
-
-.projects h2 {
-  margin-bottom: var(--normal-spacing);
-}
-
-.projects ul {
-  list-style-type: none;
+.bloglist ul h2 {
+  margin: 0;
   padding: 0;
 }
-
-.project-card {
-  margin-bottom: 20px;
-  padding: 15px;
-  background-color: var(--code-background-color);
-  border-radius: 5px;
-  height: 190px;
+.bloglist h2 {
+  color: var(--heading-color);
+  font-size: 1rem;
+}
+.list-item a {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  align-items: baseline;
+}
+.list-item .item-rest {
+  font-family: monospace;
+  font-size: 0.8rem;
+  color: var(--code-color);
 }
 
-.project-header {
+/* About */
+.about {
+  display: flex;
+  gap: 18px;
+  align-items: baseline;
+}
+.socials {
+  display: flex;
+  gap: 6px;
+  align-items: center;
+}
+.socials a {
+  color: var(--link-color);
+}
+.socials svg {
+  height: 20px;
+  fill: var(--link-color);
+}
+.socials a[aria-label="GitHub"] svg {
+  fill: none;
+  height: 22px;
+}
+.socials a[aria-label="Email"] svg {
+  width: 24px;
+}
+
+/* Projects */
+.projects ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+.project-card {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 10px;
+  gap: 8px;
+  background-color: var(--code-background-color);
+  padding: 10px 20px 20px;
+  border-radius: 6px;
 }
-
-.project-header h3 {
-  margin: 0;
-  font-size: 1em;
+.project-card svg {
+  width: 20px;
 }
-
+.project-card h3 {
+  font-size: 1rem;
+}
+.project-header {
+  display: flex;
+  align-items: left;
+  flex-direction: column;
+  row-gap: 8px;
+}
 .project-links {
   display: flex;
   gap: 10px;
   align-items: center;
 }
-
-.project-links a {
-  color: var(--link-color);
-}
-
-.project-card p {
-  font-size: 0.8em;
-  margin-bottom: 15px;
-}
-
 .project-tags {
   display: flex;
-  flex-wrap: wrap;
-  gap: 5px;
+  gap: 10px;
 }
-
 .tag {
-  font-size: 0.8em;
-  padding: 2px 6px;
+  font-size: 0.7rem;
+  padding: 5px 8px;
   background-color: var(--background-color);
-  color: var(--text-color);
-  border-radius: 3px;
   font-family: monospace;
+  border-radius: 6px;
+  color: var(--code-color);
 }
 
-.list li {
-  margin-bottom: 5px;
+.pagination {
+  display: flex;
+  gap: 10px;
+  margin-top: 40px;
+  justify-content: center;
 }
-
-.list h2 {
-  margin-bottom: var(--normal-spacing);
-}
-
-.blog p,
-.blog ul li,
-.blog ol li {
-  line-height: 26px;
-}
-
-.table-of-contents {
-  background-color: var(--code-background-color);
-  padding: 20px;
-  border-radius: 5px;
-  margin: var(--normal-spacing) 0 var(--large-spacing);
-}
-
-.table-of-contents h2 {
-  margin-bottom: 10px;
-}
-
-.table-heading {
-  font-size: 1.2rem;
-  font-weight: 600;
-}
-
-.table-of-contents ul {
-  list-style-type: none;
-  padding-left: 0;
-}
-
-.table-of-contents li {
-  margin-bottom: 0px;
-  font-family: monospace;
+.pagination button {
   font-size: 0.8rem;
+  padding: 4px 10px;
+  border-radius: 5px;
+  background-color: var(--code-background-color);
+  color: var(--code-color);
+}
+.pagination button.active {
+  color: var(--code-background-color);
+  background-color: var(--link-color);
 }
 
+/* Blog */
 .katex {
   font-size: 1.1em;
 }
-
 .katex-display {
   overflow-x: auto;
   overflow-y: hidden;
   padding: 1em 0;
 }
-
-.tag-filter {
-  margin-bottom: 20px;
+.blog p,
+.blog ul li,
+.blog ol li {
+  line-height: 24px;
+}
+.blog-post p,
+.blog-post ol,
+.blog-post ul {
+  margin-top: var(--normal-spacing);
+}
+.blog-post h1,
+.blog-post h2 {
+  margin-top: var(--large-spacing);
+}
+.blog-post h3,
+.blog-post h4,
+.blog-post h5,
+.blog-post h6 {
+  margin-top: 30px;
+  text-decoration: underline;
+  text-underline-offset: 6px;
 }
 
-.tag-filter button {
-  margin: 0 10px 10px 0;
-  padding: 5px 10px;
-  background-color: var(--code-background-color);
+/* Blog Buttons */
+.darkmode-button,
+.nav {
+  position: fixed;
+  padding: 10px;
+  top: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+.darkmode-button {
+  right: 10px;
+}
+.nav {
+  left: 10px;
+}
+.nav.hide-on-scroll {
+  transform: translateX(-100%);
+}
+.darkmode-button.hide-on-scroll {
+  transform: translateX(100%);
+}
+.blog-post svg,
+.darkmode-button svg {
+  fill: var(--heading-color);
+}
+.darkmode-button svg,
+.return-home svg {
+  height: 20px;
+}
+.darkmode-button button {
+  background: none;
   border: none;
-  border-radius: 5px;
-  color: var(--text-color);
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
   cursor: pointer;
-  font-family: monospace;
-  font-size: 0.8rem;
+  outline: inherit;
+  user-select: none;
 }
-
-.tag-filter button.active {
-  background-color: var(--link-color);
-  color: var(--background-color);
-}
-
-.item-tags {
-  margin-top: 5px;
+.darkmode-button button:focus:not(:focus-visible) {
+  outline: none;
 }
 
 .scroll-to-top {
   position: fixed;
   bottom: 20px;
-  right: 20px;
+  right: 15px;
   background-color: var(--heading-color);
   color: var(--background-color);
   width: 40px;
@@ -514,95 +367,74 @@ svg {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  transition: transform 0.2s ease-in-out;
+  transition: transform 0.4s ease-in-out;
   z-index: 1000;
+  opacity: 1;
 }
-
 .scroll-to-top.hide-on-scroll {
-  transform: translateY(150%);
+  transform: translateX(150%);
 }
-
 .scroll-to-top svg {
   width: 20px;
   height: 20px;
 }
 
-.pagination {
-  display: flex;
-  justify-content: center;
-  margin-top: var(--large-spacing);
-}
-
-.pagination button {
-  background-color: var(--code-background-color);
-  border: none;
-  color: var(--text-color);
-  cursor: pointer;
-  font-size: 0.8rem;
-  margin: 0 5px;
-  padding: 5px 10px;
-  border-radius: 5px;
-}
-
-.pagination button.active {
-  background-color: var(--link-color);
-  color: var(--background-color);
-}
-
-.skeleton-loader {
-  padding: 20px;
-  margin-top: var(--large-spacing);
-}
-
-.skeleton-line {
-  height: 20px;
-  margin-bottom: 10px;
-  background: linear-gradient(
-    90deg,
-    var(--code-background-color) 25%,
-    var(--background-color) 50%,
-    var(--code-background-color) 75%
-  );
-  background-size: 200% 100%;
-  animation: loading 1.5s infinite;
-}
-
-@keyframes loading {
-  0% {
-    background-position: 200% 0;
-  }
-  100% {
-    background-position: -200% 0;
-  }
-}
-
-.blog-meta {
-  margin-bottom: 2rem;
-}
-
-.blog-meta h1 {
-  margin-bottom: 1rem;
-  font-size: 2rem;
-}
-
 .reading-time {
-  font-size: 0.8rem;
-  color: var(--text-color);
-  opacity: 1;
-  font-family: monospace;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  margin: var(--normal-spacing) 0;
+}
+.reading-time svg {
+  position: relative;
+  top: 0px;
+  width: 18px;
+  fill: none;
+}
+
+.table-of-contents {
   background-color: var(--code-background-color);
-  padding: 10px;
-  border-radius: 5px;
+  padding: 0;
+  border-radius: 8px;
+  z-index: -1;
+}
+.toc-content {
+  overflow-y: scroll;
+  height: 280px;
+  padding: 10px 0 20px;
+}
+.table-heading {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 10px;
+  width: 100%;
+  background-color: var(--code-background-color);
+  padding: 10px 20px 5px;
+  border-radius: 8px 8px 0 0;
+}
+.table-of-contents ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+.table-of-contents a {
+  font-family: monospace;
+  font-size: 0.8rem;
 }
 
 /* Media Queries */
 @media (min-width: 750px) {
   pre {
-    padding: 0px 20px 30px 20px;
+    padding: 30 20px 30px;
   }
   :root {
-    --normal-spacing: 30px;
-    --large-spacing: 50px;
+    --normal-spacing: 20px;
+    --large-spacing: 40px;
+  }
+  .homepage {
+    row-gap: 60px;
   }
   .homepage,
   .blog {
@@ -610,11 +442,6 @@ svg {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-  }
-  .blog p,
-  .blog ul li,
-  .blog ol li {
-    line-height: 28px;
   }
   .darkmode-button,
   .return-home {
@@ -630,10 +457,7 @@ svg {
   .projects ul {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-  }
-  .project-card {
-    margin-bottom: 0;
+    gap: 30px;
   }
 }
 
@@ -661,5 +485,6 @@ svg {
   }
   .table-of-contents a:hover {
     text-decoration: underline;
+    text-decoration-color: var(--link-color);
   }
 }
