--- a/app/globals.css
+++ b/app/globals.css
@@ -565,6 +565,10 @@ a[aria-label="ReadCV"] svg {
 .library {
   margin-top: var(--padding-large);
   margin-bottom: var(--padding-large);
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .book-shelf {
@@ -601,12 +605,8 @@ a[aria-label="ReadCV"] svg {
   border-radius: 0 4px 4px 0;
   box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.2);
   cursor: default;
-  transition: transform 0.2s ease;
+  transition: transform 0.3s ease;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-}
-
-.book:hover {
-  transform: translateY(-5px);
 }
 
 .book-title {
@@ -767,5 +767,23 @@ a[aria-label="ReadCV"] svg {
 
   .scroll-to-top:hover {
     opacity: 1;
+  }
+
+  .book {
+    transition: transform 0.2s ease;
+  }
+
+  .book:hover {
+    transform: translateY(-5px);
+  }
+}
+
+@media (hover: none) and (pointer: coarse) {
+  .book {
+    transition: transform 0.3s ease;
+  }
+
+  .book:active {
+    transform: translateY(-10px);
   }
 }
