--- a/app/globals.css
+++ b/app/globals.css
@@ -216,21 +216,6 @@ img {
   margin-bottom: var(--padding-large);
 }
 
-/* Tags */
-.tag {
-  display: inline-block;
-  background-color: var(--code-background-color);
-  color: var(--color-text);
-  padding: 0.2em 0.5em;
-  margin-right: 0.5em;
-  border-radius: var(--border-radius);
-  font-size: 0.8em;
-  border: none;
-  cursor: pointer;
-  outline: inherit;
-  user-select: none;
-}
-
 /* Navigation Buttons */
 .dark-mode-toggle,
 .return-home {
@@ -417,17 +402,42 @@ a[aria-label="ReadCV"] svg {
 }
 
 /* Tag Filter */
+.tag-filter-container {
+  overflow-x: auto;
+  margin-bottom: var(--padding-large);
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.tag-filter-container::-webkit-scrollbar {
+  display: none;
+}
+
+.tag {
+  display: inline-block;
+  background-color: var(--code-background-color);
+  color: var(--color-text);
+  padding: 0.2em 0.5em;
+  margin-right: 0.5em;
+  border-radius: var(--border-radius);
+  font-size: 0.8em;
+  border: none;
+  cursor: pointer;
+  outline: inherit;
+  user-select: none;
+}
+
 .tag-filter {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: var(--padding-small);
-  margin-bottom: var(--padding-large);
 }
 
 .tag-filter .tag {
   cursor: pointer;
   padding: 5px 10px;
-  font-size: 0.75rem;
+  font-size: 0.8rem;
+  white-space: nowrap;
 }
 
 .tag-filter button {
@@ -519,15 +529,14 @@ a[aria-label="ReadCV"] svg {
 .project-card {
   flex: 0 0 auto;
   width: 300px;
-  height: 260px;
   margin-right: 20px;
-  padding: 20px;
+  padding: 30px 20px;
   border-radius: 12px;
   scroll-snap-align: start;
   color: var(--color-bg);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  row-gap: 30px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   user-select: none;
@@ -543,12 +552,15 @@ a[aria-label="ReadCV"] svg {
 
 .project-card p {
   font-size: 0.8rem;
-  margin: 10px 0;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 .project-links {
   display: flex;
   gap: 10px;
+  padding: 0;
+  margin: 0;
 }
 
 .project-links a {
@@ -564,13 +576,15 @@ a[aria-label="ReadCV"] svg {
 .project-tags {
   display: flex;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 10px;
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
 }
 
 .project-tag {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   background-color: rgba(255, 255, 255, 0.2);
-  padding: 2px 8px;
+  padding: 5px 10px;
   border-radius: 5px;
 }
 
@@ -582,7 +596,7 @@ body.is-dragging .projects-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 18px;
+  margin-top: var(--padding-medium);
 }
 
 .nav-arrow {
@@ -776,9 +790,8 @@ body.is-dragging .projects-container {
   .project-card {
     flex: 0 0 auto;
     width: 460px;
-    height: 280px;
     margin-right: 20px;
-    padding: 28px;
+    padding: 30px;
     border-radius: 12px;
   }
 
