--- a/app/globals.css
+++ b/app/globals.css
@@ -354,7 +354,6 @@ img {
   fill: var(--color-link);
   height: 24px;
   width: auto;
-  transition: transform 0.3s ease;
 }
 
 a[aria-label="ReadCV"] svg {
@@ -510,33 +509,33 @@ a[aria-label="ReadCV"] svg {
   scrollbar-width: none;
   -ms-overflow-style: none;
   padding: 20px 0;
-  scroll-behavior: smooth;
-}
-
-.projects-container.draggable {
-  cursor: grab;
-  scroll-behavior: auto;
-}
-
-.projects-container.draggable:active {
-  cursor: grabbing;
 }
 
 .projects-container::-webkit-scrollbar {
   display: none;
 }
 
+.projects-container.draggable {
+  cursor: default;
+  scroll-behavior: auto;
+}
+
+.projects-container.draggable:active {
+  cursor: grabbing;
+  scroll-behavior: auto;
+}
+
 .project-card {
   flex: 0 0 auto;
   width: 300px;
   margin-right: 20px;
-  padding: 30px 20px;
+  padding: 20px 20px 30px;
   border-radius: 12px;
   scroll-snap-align: start;
   color: var(--color-bg);
   display: flex;
   flex-direction: column;
-  row-gap: 30px;
+  gap: 26px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   user-select: none;
@@ -545,51 +544,57 @@ a[aria-label="ReadCV"] svg {
   -ms-user-select: none;
 }
 
+.project-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .project-card h3 {
   margin: 0;
-  font-size: 1.2rem;
+  flex: 1;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
 .project-card p {
+  margin: 0;
   font-size: 0.8rem;
-  padding: 0 !important;
-  margin: 0 !important;
 }
 
 .project-links {
   display: flex;
-  gap: 10px;
-  padding: 0;
-  margin: 0;
+  flex-direction: row;
+  align-items: center;
+  gap: 4px;
 }
 
 .project-links a {
   color: var(--color-bg);
   text-decoration: none;
-  font-size: 0.8rem;
-  padding: 5px 10px;
-  border: 1px solid var(--color-bg);
-  border-radius: 5px;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  padding: 3px;
+  border-radius: 4px;
+  transition: transform 0.3s ease;
+}
+
+.project-links a svg {
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+  stroke-width: 1.5px;
 }
 
 .project-tags {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-  margin-bottom: 0 !important;
-  padding-bottom: 0 !important;
+  gap: 8px;
 }
 
 .project-tag {
-  font-size: 0.8rem;
   background-color: rgba(255, 255, 255, 0.2);
-  padding: 5px 10px;
-  border-radius: 5px;
-}
-
-body.is-dragging .projects-container {
-  cursor: grabbing;
+  padding: 0.2em 0.5em;
+  border-radius: 4px;
+  font-size: 0.8rem;
 }
 
 .projects-navigation {
@@ -615,8 +620,9 @@ body.is-dragging .projects-container {
 }
 
 .nav-arrow svg {
-  width: 40px;
-  stroke-width: 3px;
+  width: 20px;
+  height: 20px;
+  stroke-width: 2px;
 }
 
 .nav-arrow.disabled {
@@ -632,7 +638,6 @@ body.is-dragging .projects-container {
 
 .dark-mode .project-links a {
   color: var(--color-text);
-  border-color: var(--color-text);
 }
 
 /* Library */
@@ -791,7 +796,7 @@ body.is-dragging .projects-container {
     flex: 0 0 auto;
     width: 460px;
     margin-right: 20px;
-    padding: 30px;
+    padding: 20px 30px 30px;
     border-radius: 12px;
   }
 
@@ -889,6 +894,10 @@ body.is-dragging .projects-container {
 
   .nav-arrow:hover {
     transform: scale(1.2);
+  }
+
+  .nav-arrow svg {
+    transform: scale(1);
   }
 
   .nav-arrow.disabled:hover {
