--- a/app/globals.css
+++ b/app/globals.css
@@ -231,13 +231,15 @@ img {
 
 .dark-mode-toggle svg,
 .return-home svg {
-  width: 20px;
+  height: 20px;
+  align-items: center;
+  display: flex;
   fill: var(--color-text);
 }
 
 .dark-mode-toggle {
   top: 10px;
-  right: 5px;
+  right: 10px;
 }
 
 .return-home {
@@ -799,7 +801,7 @@ a[aria-label="ReadCV"] svg {
   }
 
   .dark-mode-toggle {
-    top: 20px;
+    top: 18px;
     right: 30px;
   }
 
